# pddl_pipeline

./: .default-key  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  eval.py  main.py  optimized_tool_call_curated_gpt_oss_20b.json  optimized_tool_call_gpt_5_nano.json  pyproject.toml  visualize_results.py
pddl/: ring_and_peg_domain.pddl  ring_and_peg_problem.pddl
pddl/ring_and_peg/: ring_and_peg_1.pddl  ring_and_peg_domain.pddl
prompts/: action_mapping.md  action_schema_needle_transfer.md  baseline.md  baseline_context.md  baseline_domain.md  baseline_problem.md  domain.md  domain_and_problem.md  generation_context.md  generation_context_action_mapping.md  generation_context_images.md  generation_context_plan_feedback.md  generation_context_tools.md  generation_context_tools_images.md  iteration.md  needle_sorting_1.md  needle_sorting_2.md  needle_sorting_3.md  needle_sorting_domain.md  needle_transfer_1.md  needle_transfer_2.md  needle_transfer_domain.md  object_names_needle_sorting.md  object_names_needle_transfer.md  object_names_ring_and_peg.md  plan_feedback.md  planner_context.md  planner_context_images.md  planner_task.md  planner_translate_context.md  planner_translate_context_images.md  planner_translate_task.md  problem.md  react_base.md  ring_and_peg.md  ring_and_peg_1.md  ring_and_peg_2.md  ring_and_peg_3.md  ring_and_peg_4.md  ring_and_peg_5.md  (+9 more)
prompts/pddlgym_actions/: Baking.md  Elevator.md  Ferry.md  Newspapers.md  (+1 more)
scripts/: aggregate_tokens.py  bars.py  scatter.py
src/: constants.py
tests/: constants.py
(+137 files in other folders)
