[project]
name = "pddl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.8.0",
    "pillow>=12.1.0",
    "polars>=1.37.0",
    "pre-commit>=4.4.0",
    "pydantic>=2.12.4",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.10",
    "tqdm>=4.67.1",
]

[tool.pyright]
reportImportCycles = true

[tool.ruff]
output-format = "grouped"
show-fixes = true
target-version = "py313"

[tool.ruff.lint]
# For a list of all possible rules visit https://docs.astral.sh/ruff/rules/
select = [
  "F", # Pyflakes
  "E", # pycodestyle Errors
  "W", # pycodestyle Warnings
  "C90", # mccabe
  "I", # isort
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "RUF", # Ruff-specific rules
]
ignore = [
  # Rules in conflict with `ruff-format` -- START
  "W191", # Checks for indentation that uses tabs. Spaces are preferred.
  # "E111", # Checks for indentation with a non-multiple of 4 spaces, add when out of nursery
  # "E114", # Checks for indentation of comments with a non-multiple of 4 spaces, add when out of nursery
  # "E117", # Checks for over-indented code, add when out of nursery
  "E501", # Line too long
  # Rules in conflict with `ruff-format` -- END
  "RUF012", # type class attrs with `ClassVar` -- Too strict/trigger-happy
]
